Disable unused social icons and change Github URL

--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -10,7 +10,7 @@
                 </div>
                 <div class="col-12">
                     <div class="copyright text-center">
-                        &copy; {{date format="YYYY"}} <a href="{{@site.url}}">{{@site.title}}</a> - {{t "All right Reserved."}} {{{t "Published with {ghostLink}" ghostLink="<a href=\"https://ghost.org?via=biswajit48\">Ghost</a>"}}}
+                        &copy; {{date format="YYYY"}} <a href="{{@site.url}}">{{@site.title}}</a> - {{t "All right Reserved."}}
                     </div>
                 </div>
             </div>
