Change color to test

--- a/assets/scss/components/_color-and-font.scss
+++ b/assets/scss/components/_color-and-font.scss
@@ -7,7 +7,7 @@ $font-family: 'Lato', sans-serif;
 =====================================================*/
 $theme: (
     body-bg: #ffffff,
-    theme-color: #4183F2,
+    theme-color: red,
     theme-color-lighten-10: #548ff3,
     theme-color-lighten-50: #a0c1f9,
     light-bg-color: #F5F8FC,
