Tab enable search results

--- a/partials/sidebar-search.hbs
+++ b/partials/sidebar-search.hbs
@@ -1,10 +1,10 @@
 <div class="form-wrap sidebar-form-wrap">
     <form class="sidebar-search-form js-search-form">
         <div class="input-wrap">
-            <input type="text" name="search" class="search-input js-search-input small" id="search-bar" placeholder="{{t "Type to search"}}">
+            <input type="text" name="search" class="search-input js-search-input small" id="search-bar" placeholder="{{t "Type to search"}}" tabindex="1">
             {{> icons/search}}
         </div>
     </form>
-    <div class="search-result" id="search-results"></div>
+    <div class="search-result" id="search-results" tabindex="2"></div>
     <div class="no-result-message" id="no-result">{{t "No result found"}}</div>
 </div>
