--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -17,9 +17,9 @@
     line-height: 40px;
     margin-top: -4px;
     font-weight: 700;
-    color: $white;
+    color: $black;
     &:hover, &:focus {
-        color: $white;
+        color: $black;
     }
 }
 .logo-image {
@@ -36,15 +36,15 @@
             margin-right: 0;
         }
         a {
-            color: $white;
+            color: $black;
             position: relative;
             line-height: 40px;
             text-transform: capitalize;
             &:hover {
-                color: darken($white, 10);
+                color: lighten($black, 10);
             }
             &.nav-btn {
-                background-color: $white;
+                background-color: $black;
                 color: var(--text-color-dark);
                 height: 40px;
                 display: block;
@@ -63,7 +63,7 @@
         }
         &.nav-item-current {
             a {
-                color: darken($white, 10);
+                color: lighten($black, 10);
             }
         }
     }
@@ -81,7 +81,7 @@
     .line {
         width: 100%;
         height: 3px;
-        background-color: $white;
+        background-color: $black;
         position: absolute;
         right: 0;
         transition: all 0.3s;
@@ -97,7 +97,7 @@
     }
     &:hover {
         .line {
-            background-color: darken($white, 10);
+            background-color: lighten($black, 10);
         }
     }
     &.menu-icon-close {
@@ -120,7 +120,7 @@
         }
         &:hover {
             .line {
-                background-color: darken($white, 10);
+                background-color: lighten($black, 10);
             }
         }
     }
