--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -44,7 +44,7 @@
                 color: lighten($black, 10);
             }
             &.nav-btn {
-                background-color: $black;
+                background-color: $white;
                 color: var(--text-color-dark);
                 height: 40px;
                 display: block;
