🐛 Fix GitHub logo background color

--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -44,8 +44,8 @@
                 color: lighten($black, 10);
             }
             &.nav-btn {
-                background-color: $white;
-                color: var(--text-color-dark);
+                background-color: $black;
+                color: var(--text-color-light);
                 height: 40px;
                 display: block;
                 padding: 0px 16px;
