🐛 Fix GitHub logo background color

--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -45,7 +45,7 @@
             }
             &.nav-btn {
                 background-color: $black;
-                color: var(--text-color-light);
+                color: $white;
                 height: 40px;
                 display: block;
                 padding: 0px 16px;
