--- a/assets/scss/components/_color-and-font.scss
+++ b/assets/scss/components/_color-and-font.scss
@@ -1,7 +1,7 @@
 /*=====================================================
     Font
 =====================================================*/
-$font-family: 'Lato', sans-serif;
+$font-family: 'OsloSans', 'Comic Sans MS', 'Comic Sans', sans-serif;
 /*=====================================================
     Colors
 =====================================================*/
@@ -25,6 +25,11 @@ $theme: (
 
 $black: #000;
 $white: #fff;
+
+@font-face {
+    font-family: 'OsloSans';
+    src: url("assets/fonts/OsloSans-Regular.otf") format('opentype');
+}
 
 /*** PLEASE DO NOT EDIT BELOW THIS LINE ***/
 :root { 
