🐛 Revert to Leto as fallback font

--- a/assets/scss/components/_color-and-font.scss
+++ b/assets/scss/components/_color-and-font.scss
@@ -1,7 +1,7 @@
 /*=====================================================
     Font
 =====================================================*/
-$font-family: 'OsloSans', 'Comic Sans MS', 'Comic Sans', sans-serif;
+$font-family: 'OsloSans', 'Leto', sans-serif;
 /*=====================================================
     Colors
 =====================================================*/
