--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1144,15 +1144,15 @@ svg {
 }
 
 .btn-primary {
-  background-color: red;
+  background-color: #333333;
   background-color: var(--theme-color);
-  border-color: red;
+  border-color: #333333;
   border-color: var(--theme-color);
   color: #fff;
 }
 
 .btn-primary.disabled {
-  background-color: red;
+  background-color: #d9d9d9;
   background-color: var(--theme-color);
   border-color: red;
   border-color: var(--theme-color);
@@ -1176,9 +1176,9 @@ input[type='submit'] {
 }
 
 .btn-primary:hover {
-  background-color: #548ff3;
+  background-color: #dba953;
   background-color: var(--theme-color-lighten-10);
-  border-color: #548ff3;
+  border-color: #dba953;
   border-color: var(--theme-color-lighten-10);
   color: #fff;
 }
