--- a/assets/scss/components/_common.scss
+++ b/assets/scss/components/_common.scss
@@ -6,7 +6,7 @@ html {
 }
 body {
     font-family: $font-family;
-    color: var(--text-color-normal);
+    color: #333333;
     line-height: 1.5;
     position: relative;
     left: 0;
@@ -16,7 +16,7 @@ body {
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-family: $font-family;
-    color: var(--text-color-dark);
+    color: #333333;
     font-weight: 700;
     line-height: 1.3;
     margin-top: 1rem;
