--- a/assets/scss/components/_common.scss
+++ b/assets/scss/components/_common.scss
@@ -87,7 +87,7 @@ h1[id], h2[id], h3[id], h4[id], h5[id], h6[id] {
         // opacity: 0.4;
         &:hover {
            // opacity: 1;
-            text-decoration: underline;
+            // text-decoration: underline;
         }
         svg {
             width: 18px;
