--- a/assets/scss/components/_common.scss
+++ b/assets/scss/components/_common.scss
@@ -98,7 +98,7 @@ h1[id], h2[id], h3[id], h4[id], h5[id], h6[id] {
     }
 }
 a, a:hover, a:focus {
-    text-decoration: underline;
+    // text-decoration: underline;
     // color: #000;
     // text-decoration: underline;
     outline: 0;
