--- a/assets/scss/components/_common.scss
+++ b/assets/scss/components/_common.scss
@@ -87,7 +87,7 @@ h1[id], h2[id], h3[id], h4[id], h5[id], h6[id] {
         // opacity: 0.4;
         &:hover {
            // opacity: 1;
-            // text-decoration: underline;
+            text-decoration: none;
         }
         svg {
             width: 18px;
@@ -97,10 +97,12 @@ h1[id], h2[id], h3[id], h4[id], h5[id], h6[id] {
         }
     }
 }
+a {
+	text-decoration: none;
+}
 a, a:hover, a:focus {
-    // text-decoration: underline;
+    text-decoration: underline;
     // color: #000;
-    // text-decoration: underline;
     outline: 0;
     transition: all 0.25s;
 }
