--- a/assets/scss/components/_home-sections.scss
+++ b/assets/scss/components/_home-sections.scss
@@ -76,6 +76,7 @@
                 &:hover {
                     color: var(--theme-color);
                 }
+                text-decoration: none;
             }
         }
     }
