--- a/assets/scss/components/_home-sections.scss
+++ b/assets/scss/components/_home-sections.scss
@@ -88,6 +88,7 @@
                 margin-bottom: -2px;
                 margin-left: 4px;
             }
+            text-decoration: none;
         }
     }
 }
