--- a/assets/scss/components/_normalize.scss
+++ b/assets/scss/components/_normalize.scss
@@ -85,8 +85,8 @@
   
   abbr[title] {
     border-bottom: none; /* 1 */
-    text-decoration: underline; /* 2 */
-    text-decoration: underline dotted; /* 2 */
+    text-decoration: none; /* 2 */
+    text-decoration: none dotted; /* 2 */
   }
   
   /**
