👌 Add underline to links on hover

--- a/assets/scss/components/_common.scss
+++ b/assets/scss/components/_common.scss
@@ -104,6 +104,9 @@ h1[id], h2[id], h3[id], h4[id], h5[id], h6[id] {
 a {
 	text-decoration: none;
 }
+a:hover {
+    text-decoration: underline;
+}
 a, a:hover, a:focus {
     // color: #000;
     outline: 0;
