--- a/assets/scss/components/_common.scss
+++ b/assets/scss/components/_common.scss
@@ -6,7 +6,7 @@ html {
 }
 body {
     font-family: $font-family;
-    color: #333333;
+    color: var(--text-color-normal);
     line-height: 1.5;
     position: relative;
     left: 0;
@@ -16,7 +16,7 @@ body {
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-family: $font-family;
-    color: #333333;
+    color: var(--text-color-normal);
     font-weight: 700;
     line-height: 1.3;
     margin-top: 1rem;
@@ -150,8 +150,8 @@ svg {
 }
 
 .btn-primary, .btn-primary.disabled, .btn-primary:disabled, input[type='submit']  {
-    background-color: #b59051;
-    border-color: #b59051;
+    background-color: var(--theme-button-color);
+    border-color: var(--theme-button-color);
     color: $white;
     &:hover, &:not(:disabled):not(.disabled):active {
         background-color: var(--theme-color-lighten-10);
@@ -164,8 +164,8 @@ svg {
     }
 }
 .btn-secondary {
-    background-color: #333333;
-    border-color: #333333;
+    background-color: var(--theme-color);
+    border-color: var(--theme-color);
     color: $white;
     &:hover, &:not(:disabled):not(.disabled):active {
         background-color: #000;
