--- a/assets/scss/components/_color-and-font.scss
+++ b/assets/scss/components/_color-and-font.scss
@@ -8,12 +8,13 @@ $font-family: 'OsloSans', 'Leto', sans-serif;
 $theme: (
     body-bg: #ffffff,
     theme-color: red,
+    theme-button-color: #123455,
     theme-color-lighten-10: #548ff3,
     theme-color-lighten-50: #a0c1f9,
     light-bg-color: #F5F8FC,
     text-color-normal: #505763,
     text-color-dark: #333840,
-    text-color-light: #939DAD,
+    text-color-light: red,
     border-color: #E8E9EB,
     shadow: 0px 5px 25px 0px rgba(0,0,0, 0.1),
     code-bg: #1d2635,
