--- a/assets/scss/components/_color-and-font.scss
+++ b/assets/scss/components/_color-and-font.scss
@@ -13,7 +13,7 @@ $theme: (
     theme-color-lighten-50: #a0c1f9,
     light-bg-color: #F5F8FC,
     text-color-normal: #333333,
-    text-color-dark: #333333,
+    text-color-dark: #42b254,
     text-color-light: #333333,
     border-color: #E8E9EB,
     shadow: 0px 5px 25px 0px rgba(0,0,0, 0.1),
