👌 Sort posts by 'codeinjection_foot' instead of sorting by posted date

--- a/default.hbs
+++ b/default.hbs
@@ -31,6 +31,8 @@
         </script>
 		
 		<script src="{{asset "js/app.bundle.min.js"}}"></script>
-        {{ghost_foot}}
+        <!-- Disable the injection of code in the footer to use it as a sort key instead of using it for code injection.
+        {{!ghost_foot}}
+        -->
 	</body>
 </html>
