👌 Set underline on logo on hover

--- a/default.hbs
+++ b/default.hbs
@@ -31,7 +31,7 @@
         </script>
 		
 		<script src="{{asset "js/app.bundle.min.js"}}"></script>
-        <!-- Disable the injection of code in the footer to use it as a sort key instead of using it for code injection.
+        <!-- Disable the injection of code in the footer to use it as a sort instead of using it for code injection.
         {{!ghost_foot}}
         -->
 	</body>
