--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -13,6 +13,12 @@
     margin-left: 1rem;
     width: 115px;
 }
+
+.logo:hover {
+    border-bottom: 3px solid black;
+    padding-bottom: 5px;
+}
+
 .logo-text {
     font-size: 1.5rem;
     line-height: 40px;
