👌 Set underline on logo on hover

--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -16,7 +16,6 @@
 
 .logo:hover {
     border-bottom: 3px solid black;
-    padding-bottom: 5px;
 }
 
 .logo-text {
@@ -31,6 +30,7 @@
 }
 .logo-image {
     max-height: 40px;
+    margin-bottom: 5px;
 }
 .nav-list {
     padding: 0;
