--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -12,11 +12,11 @@
 .logo {
     margin-left: 1rem;
     width: 115px;
+    max-height: 55px;
 }
 
 .logo:hover {
     border-bottom: 3px solid black;
-    padding-bottom: -3px;
 }
 
 .logo-text {
@@ -31,7 +31,7 @@
 }
 .logo-image {
     max-height: 40px;
-    padding-bottom: 5px;
+    margin-bottom: 5px;
 }
 
 .nav-list {
