--- a/assets/scss/components/_common.scss
+++ b/assets/scss/components/_common.scss
@@ -104,6 +104,10 @@ h1[id], h2[id], h3[id], h4[id], h5[id], h6[id] {
 a {
 	text-decoration: none;
 }
+.nav-item-current {
+	text-decoration: underline;
+	font-weight: 700;
+}
 a:hover {
     text-decoration: underline;
 }
