--- a/assets/scss/components/_color-and-font.scss
+++ b/assets/scss/components/_color-and-font.scss
@@ -8,20 +8,20 @@ $font-family: 'OsloSans', 'Leto', sans-serif;
 $theme: (
     body-bg: #ffffff,
     theme-color: red,
-    theme-button-color: #123455,
-    theme-color-lighten-10: #548ff3,
-    theme-color-lighten-50: #a0c1f9,
-    light-bg-color: #F5F8FC,
-    text-color-normal: #333333,
-    text-color-dark: #000000,
-    text-color-light: #333333,
-    border-color: #E8E9EB,
+    theme-button-color: #2A2859, // Oslo dark blue
+    theme-color-lighten-10: #3f3d69, // Oslo dark blue 
+    theme-color-lighten-50: #54537a, // Oslo dark blue
+    light-bg-color: #F5F8FC, // light grey
+    text-color-normal: #333333, // soft black
+    text-color-dark: #000000, // black
+    text-color-light: #333333, // soft black
+    border-color: #E8E9EB, // light grey
     shadow: 0px 5px 25px 0px rgba(0,0,0, 0.1),
-    code-bg: #1d2635,
-    code-header: #060d18,
-    success: #0ca910,
-    error: #f0134d,
-    button-color: #ccc,
+    code-bg: #1d2635, // darker blue
+    code-header: #060d18, // black with hint of blue
+    success: #0ca910, // signal green
+    error: #f0134d, // signal red
+    button-color: #ccc, // light grey
 );
 
 $black: #000;
