--- a/assets/scss/components/_color-and-font.scss
+++ b/assets/scss/components/_color-and-font.scss
@@ -7,7 +7,7 @@ $font-family: 'OsloSans', 'Leto', sans-serif;
 =====================================================*/
 $theme: (
     body-bg: #ffffff,
-    theme-color: red,
+    theme-color: #2A2859, // Oslo dark blue
     theme-button-color: #2A2859, // Oslo dark blue
     theme-color-lighten-10: #3f3d69, // Oslo dark blue 
     theme-color-lighten-50: #54537a, // Oslo dark blue
