--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1674,6 +1674,13 @@ img {
   max-width: 100%;
 }
 
+figure.kg-card.kg-image-card.kg-width-full img {
+  width: 100%;
+}
+figure.kg-card.kg-image-card.kg-width-wide img {
+  width: 80%;
+}
+
 figure {
   margin: 2rem 0px 2rem 0px;
 }
