--- a/assets/scss/components/_hero-area.scss
+++ b/assets/scss/components/_hero-area.scss
@@ -3,7 +3,7 @@
     padding-bottom: 10rem;
 }
 .hero-title {
-    color: $white;
+    color: var(--text-color-dark);
     margin-top: 0;
     margin-bottom: 3rem;
 }
