--- a/assets/scss/components/_common.scss
+++ b/assets/scss/components/_common.scss
@@ -62,6 +62,9 @@ h1[id], h2[id], h3[id], h4[id], h5[id], h6[id] {
         }
     }
 }
+.hero-title {
+	font-size: 5.0rem;
+	}
 a {
 	text-decoration: none;
 }
