--- a/assets/scss/components/_prism.scss
+++ b/assets/scss/components/_prism.scss
@@ -99,7 +99,7 @@ https://prismjs.com/download.html#themes=prism-tomorrow&languages=markup+css+cli
 .token.prolog,
 .token.doctype,
 .token.cdata {
-	color: #e4e4e4;
+	color: #cdcdcd;
 }
 
 .token.punctuation {
