--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -195,7 +195,7 @@
     }
 }
 .secondary-header-bar {
-    background-color:  var(--light-bg-color);
+    background-color: #FFE7BD;
     padding: 1rem 0;
 }
 .breadcrumb {
