--- a/home.hbs
+++ b/home.hbs
@@ -49,7 +49,7 @@
         </div>
     </section>
     <!-- FAQ section -->
-    <section class="section-faq">
+    <!-- section class="section-faq"--we dont need faq on the home site>
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 offset-lg-1 col-sm-12">
